--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,14 +12,14 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="jonathan.orellana.fernanda.hernandez.myapplication.ui.dashboard.DashboardFragment"
+        android:id="@+id/fragment_pacientes"
+        android:name="jonathan.orellana.fernanda.hernandez.myapplication.ui.pacientes.fragment_pacientes"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="jonathan.orellana.fernanda.hernandez.myapplication.ui.notifications.NotificationsFragment"
+        android:id="@+id/fragmnet_agregar_pacientes"
+        android:name="jonathan.orellana.fernanda.hernandez.myapplication.ui.agregar_paciente.fragment_agregar_paciente"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
