--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -14,6 +14,6 @@
     <item
         android:id="@+id/fragmnet_agregar_pacientes"
         android:icon="@drawable/iconpacienteeee"
-        android:title="Agregar Paciente" />
+        android:title="Agregar pacientes" />
 
 </menu>
