--- a/app/src/main/res/layout/activity_item_card.xml
+++ b/app/src/main/res/layout/activity_item_card.xml
@@ -34,6 +34,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/nombre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Nombre"
