--- a/app/src/main/res/layout/fragment_agregar_paciente.xml
+++ b/app/src/main/res/layout/fragment_agregar_paciente.xml
@@ -13,7 +13,7 @@
         tools:layout_editor_absoluteY="1dp">
 
         <EditText
-            android:id="@+id/txtNombres"
+            android:id="@+id/nombre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
