--- a/app/src/main/res/layout/activity_item_card.xml
+++ b/app/src/main/res/layout/activity_item_card.xml
@@ -35,13 +35,19 @@
 
             <TextView
                 android:id="@+id/nombre"
-                android:layout_width="match_parent"
+                android:layout_width="267dp"
                 android:layout_height="wrap_content"
-                android:text="Nombre"
+                android:text="Nombre y Apellido"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/txtNombreCard"
+                android:layout_width="181dp"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/txtapellidoCard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView" />
