--- a/app/src/main/res/layout/activity_item_card.xml
+++ b/app/src/main/res/layout/activity_item_card.xml
@@ -11,7 +11,7 @@
     app:contentPadding="15dp"
 
     android:layout_width="match_parent"
-    android:layout_height="170dp"
+    android:layout_height="350dp"
     tools:context=".item_card">
 
     <LinearLayout
@@ -20,7 +20,7 @@
 
         <LinearLayout
             android:layout_width="220dp"
-            android:layout_height="131dp"
+            android:layout_height="290dp"
             android:layout_weight="1"
             android:orientation="vertical">
 
@@ -42,7 +42,7 @@
 
             <TextView
                 android:id="@+id/txtNombreCard"
-                android:layout_width="181dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView" />
 
@@ -52,9 +52,22 @@
                 android:layout_height="wrap_content"
                 android:text="TextView" />
 
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Medicamentos"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txtMedicamentosCard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="57dp"
+                android:layout_height="170dp"
                 android:orientation="horizontal">
 
                 <ImageButton
