--- a/app/src/main/res/layout/fragment_agregar_paciente.xml
+++ b/app/src/main/res/layout/fragment_agregar_paciente.xml
@@ -25,6 +25,17 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.035" />
 
+        <ImageView
+            android:id="@+id/imageView26"
+            android:layout_width="396dp"
+            android:layout_height="495dp"
+            android:layout_marginTop="520dp"
+            android:layout_marginEnd="72dp"
+            android:rotation="180"
+            android:src="@drawable/moradoclaro"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <EditText
             android:id="@+id/txtApellidos"
             android:layout_width="wrap_content"
@@ -93,22 +104,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/btnAgregar"
-            android:layout_width="188dp"
-            android:layout_height="51dp"
-            android:background="@drawable/btnmorado"
-            android:text="Agregar paciente"
-            android:textAllCaps="false"
-            android:textSize="16sp"
-            app:backgroundTint="@null"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.791" />
-
         <TextView
             android:id="@+id/textNotifications"
             android:layout_width="wrap_content"
@@ -161,6 +156,34 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.245" />
+
+        <ImageView
+            android:id="@+id/imageView19"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="200dp"
+            android:rotation="49"
+            android:rotationY="0"
+            android:src="@drawable/moradoclaro"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="-6dp" />
+
+        <Button
+            android:id="@+id/btnAgregar"
+            android:layout_width="188dp"
+            android:layout_height="51dp"
+            android:background="@drawable/btnmorado"
+            android:text="Agregar paciente"
+            android:textAllCaps="false"
+            android:textSize="16sp"
+            app:backgroundTint="@null"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.791" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
